--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-sm-6 col-md-4">
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-1.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -242,7 +242,7 @@
                   </a>
                 </div>
               </div>
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-2.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -257,7 +257,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-4">
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-3.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -270,7 +270,7 @@
                   </a>
                 </div>
               </div>
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-4.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -285,7 +285,7 @@
               </div>
             </div>
             <div class="col-lg-4 offset-sm-3 col-sm-6 offset-md-0 col-md-4">
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-5.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -298,7 +298,7 @@
                   </a>
                 </div>
               </div>
-              <div class="item" data-aos="zoom-in">
+              <div class="item" data-aos="zoom-in" data-aos="fade-right">
                 <img src="images/gallery-img-6.jpg" alt="image" />
                 <div class="overlay">
                   <a
@@ -642,7 +642,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-md-4">
-            <div class="item" data-aos="fade-up">
+            <div class="item" data-aos="zoom-in">
               <h2>Professional Membership</h2>
               <div class="img">
                 <img src="images/mship-img-2.jpg" alt="image" />
